--- a/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
+++ b/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\ApplicationEvent.cpp" />
     <ClCompile Include="src\Event.cpp" />
+    <ClCompile Include="src\Gldebug.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MouseEvent.cpp" />
     <ClCompile Include="src\pch.cpp">
@@ -114,6 +115,7 @@
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\ApplicationEvent.h" />
     <ClInclude Include="src\Event.h" />
+    <ClInclude Include="src\Gldebug.h" />
     <ClInclude Include="src\Keycodes.h" />
     <ClInclude Include="src\MouseEvent.h" />
     <ClInclude Include="src\pch.h" />
