Added a file reader function to prepare for reading shader files

--- a/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
+++ b/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\ApplicationEvent.cpp" />
     <ClCompile Include="src\Event.cpp" />
+    <ClCompile Include="src\FileReader.cpp" />
     <ClCompile Include="src\Gldebug.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MouseEvent.cpp" />
@@ -115,6 +116,7 @@
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\ApplicationEvent.h" />
     <ClInclude Include="src\Event.h" />
+    <ClInclude Include="src\FileReader.h" />
     <ClInclude Include="src\Gldebug.h" />
     <ClInclude Include="src\Keycodes.h" />
     <ClInclude Include="src\MouseEvent.h" />
@@ -123,6 +125,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="src\shaders\test.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
