--- a/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
+++ b/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
@@ -99,6 +99,7 @@
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\ApplicationEvent.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Event.cpp" />
     <ClCompile Include="src\FileReader.cpp" />
     <ClCompile Include="src\Gldebug.cpp" />
@@ -121,6 +122,7 @@
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\ApplicationEvent.h" />
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Event.h" />
     <ClInclude Include="src\FileReader.h" />
     <ClInclude Include="src\Gldebug.h" />
