Implemented mouse events for imgui. Key events require more work

--- a/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
+++ b/3D Graphics Engine v2/3D Graphics Engine v2.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="src\Event.cpp" />
     <ClCompile Include="src\FileReader.cpp" />
     <ClCompile Include="src\Gldebug.cpp" />
+    <ClCompile Include="src\ImGui\ImGuiHandler.cpp" />
     <ClCompile Include="src\ImGui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="src\IndexBuffer.cpp" />
     <ClCompile Include="src\Input.cpp" />
@@ -129,6 +130,7 @@
     <ClInclude Include="src\Event.h" />
     <ClInclude Include="src\FileReader.h" />
     <ClInclude Include="src\Gldebug.h" />
+    <ClInclude Include="src\ImGui\ImGuiHandler.h" />
     <ClInclude Include="src\ImGui\imgui_impl_opengl3.h" />
     <ClInclude Include="src\IndexBuffer.h" />
     <ClInclude Include="src\Input.h" />
