Made imgui block input events. Implemented window resize event for imgui

--- a/3D Graphics Engine v2/imgui.ini
+++ b/3D Graphics Engine v2/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=683,24
+Pos=704,24
 Size=550,680
+Collapsed=0
+
+[Window][Test window]
+Pos=60,60
+Size=142,71
+Collapsed=0
+
+[Window][Rendering settigns]
+Pos=14,13
+Size=186,123
 Collapsed=0
 
