--- a/3D Graphics Engine v2/imgui.ini
+++ b/3D Graphics Engine v2/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=704,24
+Pos=720,13
 Size=550,680
 Collapsed=0
 
@@ -14,7 +14,12 @@ Size=142,71
 Collapsed=0
 
 [Window][Rendering settigns]
-Pos=14,13
+Pos=15,13
 Size=186,123
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
 Collapsed=0
 
