--- a/3D Graphics Engine v2/imgui.ini
+++ b/3D Graphics Engine v2/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=720,13
-Size=550,680
-Collapsed=1
+Pos=725,16
+Size=545,683
+Collapsed=0
 
 [Window][Test window]
 Pos=60,60
@@ -21,5 +21,10 @@ Collapsed=0
 [Window][Example: Console]
 Pos=60,60
 Size=520,600
+Collapsed=0
+
+[Window][Title bar Hovered/Active tests]
+Pos=69,60
+Size=471,61
 Collapsed=0
 
